# tesi

.github/workflows/: windows.yml
toy-choreo/: .gitignore  CMakeLists.txt  CMakePresets.json  README  vcpkg.json
toy-choreo/.github/workflows/: windows.yml
toy-choreo/doc/: EBNF.txt  sintassi-astratta.txt  sintassi-concreta.txt
toy-choreo/grammar/: ToyChoreo.g4
toy-choreo/grammar/.antlr/: ToyChoreo.interp  ToyChoreoLexer.interp  ToyChoreoLexer.java  ToyChoreoLexer.tokens  ToyChoreoParser.java
toy-choreo/src/: Ast.h  AstBuilderVisitor.cpp  AstBuilderVisitor.h  AstPrinter.cpp  AstPrinter.h  ErrorListener.cpp  ErrorListener.h  PrettyPrintVisitor.cpp  PrettyPrintVisitor.h  main.cpp
toy-choreo/tests/: err_01.toy  ok_01.toy  ok_02.toy
